Fix white-space wrapping for code tags

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -206,6 +206,7 @@ i {
 
     :not(pre) > code {
       padding: 0.2rem;
+      white-space: pre-wrap;
       border-radius: $borderRadius;
       font-weight: bold;
       color: $background;
